Fix background flickering

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -8,6 +8,13 @@ body {
   margin: 0rem;
   width: 100%;
   height: 100%;
+  background: linear-gradient(-45deg, violet, indigo, blue, green, yellow, orange, red, violet);
+  background-size: 400% 400%;
+  background-attachment: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  animation: gradient 5s ease infinite;
 }
 
 canvas {
@@ -123,9 +130,10 @@ canvas {
 }
 
 .dim-gradient {
-  height: 100%;
   width: 100%;
+  min-height: 100%;
   position: absolute;
+  will-change: top;
   background-color: rgba(255, 255, 255, 0.97);
 }
 
